# uc-intg-firetv

./: .gitignore  Dockerfile  README.md  docker-entry.sh  driver.json  pyproject.toml  requirements.txt
.github/workflows/: build.yml
intg_firetv/: __init__.py  __main__.py  apps.py  client.py  commandcontext.py  config.py  debounceTimer.py  device.py  driver.py  helper.py  keys.py  remote.py  setup_flow.py
uc_intg_firetv/: client.py  driver.py  remote.py
